--- a/nautilus-ionic/src/app/views/requests/requests.page.html
+++ b/nautilus-ionic/src/app/views/requests/requests.page.html
@@ -1,5 +1,5 @@
 
 <ion-content>
-  <ion-button (click)="mockAddRequest()"></ion-button>
+<!--  <ion-button (click)="mockAddRequest()"></ion-button>-->
   <app-join-requests></app-join-requests>
 </ion-content>
