--- a/nautilus-ionic/src/app/app.component.html
+++ b/nautilus-ionic/src/app/app.component.html
@@ -46,7 +46,7 @@
 <!--        </ion-toolbar>-->
 
       </ion-header>
-      <ion-router-outlet id="main-content"></ion-router-outlet>
+      <router-outlet id="main-content"></router-outlet>
     </ion-content>
 
   </ion-split-pane>
