--- a/nautilus-ionic/src/app/components/requests/inventory-requests/inventory-requests.component.html
+++ b/nautilus-ionic/src/app/components/requests/inventory-requests/inventory-requests.component.html
@@ -1,37 +1,52 @@
-<ion-card (click)="navigateToDetail()" class="inventory-card-list">
-  <ion-card-header>
-    <ion-card-title>
-      <ion-icon  style="padding-right: 16px" [name]="'tennisball-outline'"></ion-icon>
-      <ion-label>{{ request._id }}</ion-label>
-    </ion-card-title>
-    <ion-card-subtitle>
-      <ion-icon style="padding-right: 16px" name="finger-print-outline"></ion-icon>
-      <!--                <ion-label [title]="getCardSubtitle(req)"></ion-label>-->
-      <ion-label>{{'Request ID: ' + request.requestId }}</ion-label>
-    </ion-card-subtitle>
-  </ion-card-header>
+<ion-button (click)="openAddInventoryModal()">Generate New Inventory Request</ion-button>
+<ion-grid>
+  <ion-row>
+    <ion-col>
+      <ion-accordion-group [multiple]="true">
+        <ion-accordion *ngFor="let associationName of inventoryRequestsMap.keys()">
+          <ion-item slot="header">
+            <ion-grid>
 
-  <ion-card-content>
-    <div>
-      <ion-chip [color]="getStatusColor(request.status)">
-        <ion-icon [name]="getStatusIcon(request.status)"></ion-icon>
-        <ion-label>{{ request.status }}</ion-label>
-      </ion-chip>
+              <ion-row>
+                <ion-col>
+                  <app-label [text]="associationName" [description]="'Association Name'"></app-label>
+                </ion-col>
+                <ion-col>
+                  <app-label [text]="inventoryRequestsMap.get(associationName)?.length" [description]="'Count'"></app-label>
+                </ion-col>
+              </ion-row>
 
-      <ion-chip>
-        <ion-icon name="calendar-outline"></ion-icon>
-        <ion-label>{{ formatTimestamp(request.updatedAt) }}</ion-label>
-      </ion-chip>
-    </div>
+            </ion-grid>
+          </ion-item>
+          <ion-item *ngFor="let request of inventoryRequestsMap.get(associationName)" [detail]="true" slot="content"
+                    button (click)="navigateToDetail(request._id)">
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  <ion-chip [color]="getStatusColor(request.status)">
+                    <ion-icon [name]="getStatusIcon(request.status)"></ion-icon>
+                    <app-label [text]="request.status" [description]="'Status'"></app-label>
+                  </ion-chip>
+                </ion-col>
+                <ion-col>
+                  <app-label [text]="request.inventoryChanges?.length" [description]="'Inventory Changes Count'"></app-label>
+                </ion-col>
+                <ion-col>
+                  <app-label [text]="request.createdAt | date" [description]="'Created At'"></app-label>
+                </ion-col>
+                <ion-col>
+                  <app-label [text]="request.updatedAt | date" [description]="'Updated At'"></app-label>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+        </ion-accordion>
+      </ion-accordion-group>
 
-    <div *ngIf="request.tags?.length">
-      <strong>
-        <ion-icon name="pricetags-outline"></ion-icon> Tags:
-      </strong>
-      <ion-chip *ngFor="let inv of request.inventoryChanges">
-        <ion-icon name="pricetag-outline"></ion-icon>
-        <ion-label>{{ inv.itemName }}</ion-label>
-      </ion-chip>
-    </div>
-  </ion-card-content>
-</ion-card>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+
+
+
