--- a/nautilus-ionic/src/app/components/requests/modals/project-request-add-modal/project-request-add-modal.component.html
+++ b/nautilus-ionic/src/app/components/requests/modals/project-request-add-modal/project-request-add-modal.component.html
@@ -1,4 +1,4 @@
-<ion-label *ngIf="type">{{"Add new " + type + " request."}}</ion-label>
+<ion-label>{{"Add new Project request."}}</ion-label>
 <ion-list>
   <!-- Association Selection -->
   <ion-item>
