--- a/nautilus-ionic/src/app/views/requests/detail-pages/association-request-detail/association-request-detail.page.html
+++ b/nautilus-ionic/src/app/views/requests/detail-pages/association-request-detail/association-request-detail.page.html
@@ -94,4 +94,6 @@
 
 <app-approval-card [buttonsDisabled]="!req?.associationConfirmed || req?.status !== RequestStatus.Pending"
                    (confirmationEvent)="handleConfirmationEvent($event)"></app-approval-card>
+
+  <app-notification-banner></app-notification-banner>
 </ion-content>
